--- a/lemme ask/index.html
+++ b/lemme ask/index.html
@@ -47,8 +47,22 @@
 <div class="paper">
 <p class="p1">Drag the papers to move!</p>
 </div>
-<!-- partial -->
-  <script  src="./script.js"></script>
+  <script>
+
+      if ('ontouchstart' in window) {
+    // This is a mobile device
+    // Load mobile-specific script
+    var script = document.createElement('script');
+    script.src = 'mobile.js'; 
+    document.head.appendChild(script);
+  } else {
+    // This is a PC or a device with a mouse pointer
+    // Load PC-specific script
+    var script = document.createElement('script');
+    script.src = 'script.js'; 
+    document.head.appendChild(script);
+  }
+</script>
 
 </body>
 </html>
